# astra-sim

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  Dockerfile  LICENSE  README.md  build.sh  comm_size_var_type_fix.patch  compile_commands.json  demo.ipynb  log  run.sh  run_e2e.sh  run_switch.sh  test.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/workflows/: all-source-clang-tidy.yml  build-analytical.yml  build.sh  build_all.sh  clang-format.yml  clang-tidy-all.yml  clang-tidy-cc.yml  clang-tidy-hh.yml  clang-tidy-review.yml  clang_format_lint.yml  cmake-tidy-all.yml  cmake-tidy-review.yml  cmake_analytical_example.yml  setup.sh  test.sh  workflow_build_all.yml  workflow_main.yml
ace_review_2024/: .gitignore  Dockerfile  compile_astra_sim.sh  install_chakra.sh  start_docker_container.sh
ace_review_2024/example1/: generate_chakra_et.py  run_simulation.sh  visualize_chakra_et.sh
ace_review_2024/example2/: convert_workload.sh  run_simulation.sh  visualize_chakra_et.sh  workload_text.txt
ace_review_2024/example3/: convert.sh  convert_traces.sh  merge.sh  merge_traces.sh  run_demo3.sh  run_simulation.sh
astra-sim/: build.sh
astra-sim/common/: AstraComputeAPI.cc  AstraComputeAPI.hh  AstraNetworkAPI.hh  AstraRemoteMemoryAPI.hh  AstraSimDataAPI.hh  Cache.cc  Cache.hh  Common.hh  Logging.cc  Logging.hh  ProtobufUtils.cc  ProtobufUtils.hh  Util.cc  Util.hh
astra-sim/network_frontend/analytical/: CMakeLists.txt
astra-sim/network_frontend/analytical/common/: CallbackTracker.cc  CallbackTrackerEntry.cc  ChunkIdGenerator.cc  ChunkIdGeneratorEntry.cc  CmdLineParser.cc  CmdLineParser.hh  CommonNetworkApi.cc
astra-sim/network_frontend/analytical/congestion_aware/: AstraCongestionApi.cc  AstraCongestionApi.hh  CMakeLists.txt  ChunkIdGenerator.cc  ChunkIdGenerator.hh  CongestionAwareNetworkApi.cc  EventHandlerTracker.cc  EventHandlerTracker.hh  EventHandlerTrackerEntry.cc  EventHandlerTrackerEntry.hh  NetworkApi.cc  NetworkApi.hh  SendRecvId.cc  SendRecvId.hh  main.cc
astra-sim/network_frontend/analytical/congestion_unaware/: AnalyticalNetwork.cc  AnalyticalNetwork.hh  CMakeLists.txt  CongestionUnawareNetworkApi.cc  PayloadSizeTracker.cc  PayloadSizeTracker.hh  SendRecvTrackingMap.cc  SendRecvTrackingMap.hh  SendRecvTrackingMapValue.cc  SendRecvTrackingMapValue.hh  main.cc
astra-sim/network_frontend/analytical/include/common/: CallbackTracker.hh  CallbackTrackerEntry.hh  ChunkIdGenerator.hh  ChunkIdGeneratorEntry.hh  CmdLineParser.hh  CommonNetworkApi.hh
astra-sim/network_frontend/analytical/include/congestion_aware/: CongestionAwareNetworkApi.hh
astra-sim/network_frontend/analytical/include/congestion_unaware/: CongestionUnawareNetworkApi.hh
astra-sim/network_frontend/htsim/: CMakeLists.txt  HTSimMain.cc  HTSimNetworkApi.cc  HTSimNetworkApi.hh  HTSimSession.cc  HTSimSession.hh  HTSimSessionImpl.hh
astra-sim/network_frontend/htsim/proto/: HTSimProtoTcp.cc  HTSimProtoTcp.hh  HTSimProtoUet.cc  HTSimProtoUet.hh
astra-sim/statistics/: GStats.cc  GStats.hh  GStatsIoActivity.cc  GStatsIoActivity.hh
astra-sim/system/: Algorithm.hh  AllToAll.cc  AllToAll.hh  AstraComputeAPI.cc  AstraComputeAPI.hh  AstraMemoryAPI.hh  AstraNetworkAPI.hh  AstraRemoteMemoryAPI.hh  AstraSimDataAPI.hh  BaseStream.cc  BaseStream.hh  BasicEventHandlerData.cc  BasicEventHandlerData.hh  BasicLogicalTopology.hh  BinaryTree.cc  BinaryTree.hh  CSVWriter.cc  CSVWriter.hh  CallData.hh  Callable.hh  CollectivePhase.cc  CollectivePhase.hh  CollectivePlan.cc  CollectivePlan.hh  Common.hh  CommunicatorGroup.cc  CommunicatorGroup.hh  ComputeNode.hh  DMA_Request.cc  DMA_Request.hh  DataSet.cc  DataSet.hh  DoubleBinaryTreeAllReduce.cc  DoubleBinaryTreeAllReduce.hh  IntData.hh  LocalRingGlobalBinaryTree.cc  LocalRingNodeA2AGlobalDBT.cc  LocalRingNodeA2AGlobalDBT.hh  LogGP.cc  LogGP.hh  (+52 more)
astra-sim/utils/: AstraNetworkAPI.hh  Logging.cc  Logging.hh  logging.cc  logging.hh
astra-sim/workload/: CSVWriter.cc  CSVWriter.hh  CollCommSynchronizer.cc  CollCommSynchronizer.hh  CommunicatorGroupManager.cc  CommunicatorGroupManager.hh  HardwareResource.cc  HardwareResource.hh  Layer.cc  Layer.hh  LocalMemUsageTracker.cc  LocalMemUsageTracker.hh  LocalMemoryTracker.cc  LocalMemoryTracker.hh  Statistics.cc  Statistics.hh  Workload.cc  Workload.hh
compute/: README.md
docs/images/: figures.pptx
example/analytical/: CMakeLists.txt  build.sh
examples/: README.md  example.sh  run_DLRM_analytical.sh  run_allreduce.sh  run_allreduce_analytical.sh  run_alltoall.sh  run_alltoall_analytical.sh  run_multi.sh  run_sim.sh  simple_analytical_run.sh
examples/custom_collective/: ChakraImpl.json  run_analytical_with_custom_collective.sh
examples/htsim/: 8nodes.topo  gdb_run_htsim.sh  run_htsim.sh
examples/network_analytical/: network.yml  run_network_analytical.sh
examples/ns3/: remote_memory.json
examples/results/: EndToEnd.csv  README.md  detailed.csv
examples/system/: custom_collective.json
examples/text_converter/: run_text_converter.sh  system.json
inputs/comm_group/: comm_group.txt  comm_group_sample.json
inputs/network/: dgx_v100_4gpu.yml  dgx_v100_8gpu.yml  hgx_h100_16gpu.yml  hgx_h100_2gpu.yml  hgx_h100_32gpu.yml  hgx_h100_4gpu.yml  hgx_h100_8gpu.yml  sample_torus.json  (+3 more)
my_test/: chakra-node-compute-sim.py  my_convert.sh  run.sh
network/: README.md
system/: AstraComputeAPI.hh  AstraMemoryAPI.hh  AstraNetworkAPI.hh  CommonAPI.hh  CommunicationAPI.hh  ComputeAPI.hh  MemoryAPI.hh  MemoryCommonAPI.hh  README.md  SimpleMemory.cc  SimpleMemory.hh  Sys.cc  Sys.hh
test/: CMakeLists.txt  TestBasicEventHandlerData.cc
testing/: .analytical-exp.sh.swp  .link-activity.txt.swp  analytical-exp.sh  congestion-exp.sh  no_memory_expansion.json  plotting-sindhu.py  plotting.py  sample_fully_connected_sys.txt
tests/: readme.txt  run_all.sh
utils/: build_docker_image.sh  install_chakra.sh  run_clang_format.sh  start_docker_container.sh
workload/: README.md  Workload.cc  Workload.hh
(+788 files in other folders)
